feat: Add configurable model and thinking-level selection to Gemini chat
Models are defined in application.properties (overridable via gemini.properties)
with the same key-based pattern as prompts. A Model and Thinking dropdowns sit
alongside the Base prompt selector in the comparison tab; both are populated from
new /api/chat/models and /api/chat/prompts endpoints on panel open.

Thinking level (none/minimal/low/medium/high) is sent as thinkingConfig.thinkingLevel
in generationConfig. thoughtSignature is captured from response parts, stored in the
DB (thought_signature column, auto-migrated), threaded back through chatHistory on
each turn, and re-sent to Gemini to preserve multi-turn reasoning quality.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>