@@ -7,6 +7,7 @@ import org.springframework.stereotype.Repository;
 import org.springframework.web.client.RestClient;
 
 import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
@@ -25,8 +26,9 @@ public class GeminiRepository {
                 .build();
     }
 
-    public String sendChat(String systemPrompt, String userMessage,
-                           List<ConversationTurn> history, List<ConversationTurn> preamble) {
+    public ChatResult sendChat(String systemPrompt, String modelId, String thinkingLevel,
+                               String userMessage, List<ConversationTurn> history,
+                               List<ConversationTurn> preamble) {
         List<Map<String, Object>> contents = new ArrayList<>();
 
         // Inject context preamble at the very start (only populated on the first turn)
@@ -41,9 +43,14 @@ public class GeminiRepository {
 
         if (history != null) {
             for (ConversationTurn turn : history) {
+                List<Map<String, Object>> parts = new ArrayList<>();
+                parts.add(Map.of("text", turn.text()));
+                if (turn.thoughtSignature() != null && !turn.thoughtSignature().isBlank()) {
+                    parts.add(Map.of("thoughtSignature", turn.thoughtSignature()));
+                }
                 contents.add(Map.of(
                         "role", toGeminiRole(turn.role()),
-                        "parts", List.of(Map.of("text", turn.text()))
+                        "parts", parts
                 ));
             }
         }
@@ -53,15 +60,20 @@ public class GeminiRepository {
                 "parts", List.of(Map.of("text", userMessage))
         ));
 
-        var body = Map.of(
-                "system_instruction", Map.of("parts", List.of(Map.of("text", systemPrompt))),
-                "contents", contents,
-                "generationConfig", Map.of("temperature", 0.7, "maxOutputTokens", 8192)
-        );
+        Map<String, Object> genConfig = new HashMap<>();
+        genConfig.put("temperature", 0.7);
+        genConfig.put("maxOutputTokens", 8192);
+        if (thinkingLevel != null && !thinkingLevel.isBlank()) {
+            genConfig.put("thinkingConfig", Map.of("thinkingLevel", thinkingLevel));
+        }
+
+        Map<String, Object> body = new HashMap<>();
+        body.put("system_instruction", Map.of("parts", List.of(Map.of("text", systemPrompt))));
+        body.put("contents", contents);
+        body.put("generationConfig", genConfig);
 
         GeminiResponse response = restClient.post()
-                .uri("/v1beta/models/{model}:generateContent?key={key}",
-                        properties.getModel(), properties.getApiKey())
+                .uri("/v1beta/models/{model}:generateContent?key={key}", modelId, properties.getApiKey())
                 .contentType(MediaType.APPLICATION_JSON)
                 .body(body)
                 .retrieve()
@@ -70,7 +82,20 @@ public class GeminiRepository {
         if (response == null || response.candidates() == null || response.candidates().isEmpty()) {
             throw new RuntimeException("Empty response from Gemini API");
         }
-        return response.candidates().getFirst().content().parts().getFirst().text();
+
+        List<Part> parts = response.candidates().get(0).content().parts();
+        String text = parts.stream()
+                .filter(p -> p.text() != null)
+                .map(Part::text)
+                .findFirst()
+                .orElseThrow(() -> new RuntimeException("No text part in Gemini response"));
+        String sig = parts.stream()
+                .filter(p -> p.thoughtSignature() != null)
+                .map(Part::thoughtSignature)
+                .findFirst()
+                .orElse(null);
+
+        return new ChatResult(text, sig);
     }
 
     // -------------------------------------------------------------------------
@@ -91,11 +116,17 @@ public class GeminiRepository {
     }
 
     // -------------------------------------------------------------------------
+    // Result type
+    // -------------------------------------------------------------------------
+
+    public record ChatResult(String text, String thoughtSignature) {}
+
+    // -------------------------------------------------------------------------
     // Gemini API response model
     // -------------------------------------------------------------------------
 
     record GeminiResponse(List<Candidate> candidates) {}
     record Candidate(Content content) {}
     record Content(List<Part> parts) {}
-    record Part(String text) {}
+    record Part(String text, String thoughtSignature) {}
 }
